Test Sandbox Project/src/objects/Help_Center__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Id_WP__c</fullName>
        <label>Id WP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Name__c</fullName>
        <label>Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_Feedback__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Negative Feedback</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Position</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Positive_Feedback__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Positive Feedback</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promoted</label>
        <type>Checkbox</type>
    </fields>
    <label>Help Center</label>
    <pluralLabel>Help Center</pluralLabel>
</CustomObject>